--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected  似懂非懂防守打法-->
+    <!-- built files will be auto injected  11似懂非懂防守打法-->
   </body>
 </html>
